# data-model

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  params.json  pyproject.toml
.github/workflows/: build_uv_cache.yml  ci.yml  docs.yml  release.yml
docs/: installation.md
src/eopf_geozarr/: __init__.py  cli.py  metrics.py
src/eopf_geozarr/commands/: __init__.py  _shared.py  cmd_benchmark.py  cmd_convert.py  cmd_info.py  cmd_stac.py  cmd_validate.py  dask_utils.py  html_utils.py
src/eopf_geozarr/conversion/: __init__.py  encoding.py  fs_utils.py  geozarr.py  groups.py  helpers.py  hierarchy.py  io.py  metadata.py  multiscales.py  prepare.py  utils.py  zarr_write.py
src/eopf_geozarr/pipeline/: __init__.py  models.py
tests/: conftest.py  test_cli_e2e.py  test_conversion.py  test_encoding.py  test_helpers.py  test_integration_sentinel2.py  test_writer.py
tools/: metrics_summary.py
